# rtssdiffviewer

./: .gitignore  Makefile  README.md  app.py  deploy.sh  pyproject.toml  requirements.txt
src/rtssdiffviewer/: __init__.py  dcm_to_json.py  diff_core.py
tests/: test_app_features.py
