[project]
name = "rtssdiffviewer"
version = "0.1.0"
description = "Streamlit app for RTSS DICOM to JSON conversion and git-like diffing"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.43",
  "st-diff-viewer>=1.0.7",
  "pydicom>=3.0.1",
  "plotly>=5.24",
  "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
